--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       DB_USER: user
       DB_PASSWORD: password
       DB_NAME: mydatabase
+      OPENAI_API_KEY: ${OPENAI_API_KEY}
     tty: true
     volumes:
       - ./:/app
